41-backend-add-core-chat - Fixed validations