@@ -1,12 +1,8 @@
 package com.example.thehiveapp.service.chat;
 
-import com.example.thehiveapp.dto.chat.ChatDto;
 import com.example.thehiveapp.entity.chat.Chat;
 import com.example.thehiveapp.entity.user.User;
-import com.example.thehiveapp.mapper.chat.ChatMapper;
 import com.example.thehiveapp.repository.chat.ChatRepository;
-import com.example.thehiveapp.repository.user.EmployerRepository;
-import com.example.thehiveapp.repository.user.StudentRepository;
 import org.apache.coyote.BadRequestException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
@@ -19,39 +15,29 @@ import java.util.stream.Collectors;
 public class ChatServiceImpl implements ChatService {
     
     @Autowired private ChatRepository chatRepository;
-    @Autowired private EmployerRepository employerRepository;
-    @Autowired private StudentRepository studentRepository;
-    @Autowired private ChatMapper chatMapper;
 
     public ChatServiceImpl() {}
 
-    public List<ChatDto> getChats() {
-        return chatRepository.findAll().stream()
-                .map(chatMapper::toDto)
-                .collect(Collectors.toList());
+    public List<Chat> getChats() {
+        return chatRepository.findAll();
     }
 
-    public ChatDto createChat(ChatDto dto) {
-        Chat chat = chatRepository.save(chatMapper.toEntity(dto));
-        dto = chatMapper.toDto(chat);
-        return dto;
+    public Chat createChat(Chat chat) {
+        return chatRepository.save(chat);
     }
 
-    public ChatDto getChatById(Long id) {
-        return chatMapper.toDto(
-                chatRepository.findById(id).orElseThrow(
-                        () -> new ResourceNotFoundException("Chat not found with id " + id)
-                )
+    public Chat getChatById(Long id) {
+        return chatRepository.findById(id).orElseThrow(
+                () -> new ResourceNotFoundException("Chat not found with id " + id)
         );
     }
 
-    public ChatDto updateChat(ChatDto dto) {
-        Long id = dto.getChatId();
+    public Chat updateChat(Chat chat) {
+        Long id = chat.getChatId();
         chatRepository.findById(id).orElseThrow(
                 () -> new ResourceNotFoundException("Chat not found with id " + id)
         );
-        Chat chat = chatMapper.toEntity(dto);
-        return chatMapper.toDto(chatRepository.save(chat));
+        return chatRepository.save(chat);
     }
 
     public void deleteChat(Long id) {
@@ -62,18 +48,14 @@ public class ChatServiceImpl implements ChatService {
     }
 
     @Override
-    public List<ChatDto> getChatsByUser(User user) throws BadRequestException {
+    public List<Long> getChatIdsByUser(User user) throws BadRequestException {
         return switch (user.getRole()) {
-            case EMPLOYER -> chatRepository.findAllByEmployer(
-                    employerRepository.findByUserId(user.getUserId()).orElseThrow(
-                            () -> new ResourceNotFoundException("Employer not found with id " + user.getUserId())
-                    )
-            ).stream().map(chatMapper::toDto).collect(Collectors.toList());
-            case STUDENT -> chatRepository.findAllByStudent(
-                    studentRepository.findByUserId(user.getUserId()).orElseThrow(
-                            () -> new ResourceNotFoundException("Student not found with id " + user.getUserId())
-                    )
-            ).stream().map(chatMapper::toDto).collect(Collectors.toList());
+            case EMPLOYER -> chatRepository.findAllByEmployerId(
+                    user.getUserId()
+            ).stream().map(Chat::getChatId).collect(Collectors.toList());
+            case STUDENT -> chatRepository.findAllByStudentId(
+                        user.getUserId()
+                ).stream().map(Chat::getChatId).toList();
             default -> throw new BadRequestException("Invalid role: must be STUDENT or EMPLOYER");
         };
     }
